[package]
name = "dummy-grpc-server"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "dummy-grpc-server"
path = "src/server.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.9.2"

[build-dependencies]
tonic-build = "0.9"
